# bm-census-moop-correlation

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: FindSILLY.cmake
data/: MoopMap-2016.xml  README
doc/: stat.tex
inc/: DataDefs.h  MoopDataAnalyzer.h  MoopMap.h  MoopMapLinkDef.h  MoopMapPic.h  MoopMapPicLinkDef.h  Utilities.h  checkMap.h  checkMapLinkDef.h
macros/: drawToyResults.C  filterAndAnaData.sh  filterAndAnaDataCategory.sh  parseCensusCSV.R  summaryAnaStats.C
src/: DataDefs.cxx  MoopDataAnalyzer.cxx  MoopMap.cxx  MoopMapPic.cxx
util/: analyzeCensusData.cxx  analyzeToyData.cxx  checkMap.cxx  generateToys.cxx
